fixed top overlap

--- a/style.css
+++ b/style.css
@@ -113,6 +113,7 @@ body {
     align-items: center;
     padding: 25px;
     padding-top: 50px;
+    position: relative;
 
 
 }
@@ -130,19 +131,24 @@ body {
 }
 
 #homeimage {
-    height: auto;
+    /* height: auto; */
     width: 100%;
     margin: 0px;
     padding: 0px;
+    top:0;
+    margin-top:50px;
+    position: absolute;
+
 
 }
 
 #hometitles {
     z-index: 3;
     /* padding-left: 25px; */
-    padding-top: 50px;
-    position: absolute;
+    /* margin-top: 50px; */
     color: white;
+    height: auto;
+    padding-top:0px;
     /* width: 100%; */
 }
 
